--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
             font-size: 1.04rem;
 
         }
+        button:hover{
+            background-color: rgb(23, 2, 69);
+        }
 
         main hr {
             border: 0;
